[package]
name = "pst"
description = "Share code or text without leaving the command line."
version = "0.1.0-alpha.0"
authors = ["Tomasz Kurcz <uint@lavabit.com>"]
edition = "2018"
license = "MIT"
keywords = ["pastebin", "CLI", "paste"]
categories = ["command-line-utilities"]
build = "build.rs"

[dependencies]
reqwest = "0.9"
structopt = "0.3"
lazy_static = "1.4.0"
