[package]
name = "pst_bin"
description = "Share code or text without leaving the command line."
version = "0.1.0-alpha.0"
authors = ["Tomasz Kurcz <uint@lavabit.com>"]
edition = "2018"
license = "MIT"
keywords = ["pastebin", "CLI", "paste"]
categories = ["command-line-utilities"]
build = "build.rs"

[workspace]

[dependencies]
pst = { path = "lib" }
clap = "2"
serde = "1"
config = "0.10"
rust-embed = "5"
app_dirs = "1"
strum = "0.18"
strum_macros = "0.18"
