[package]
name = "pst"
description = "Pastebin service bindings."
version = "0.1.0-alpha.0"
authors = ["Tomasz Kurcz <uint@lavabit.com>"]
edition = "2018"
license = "MIT"
keywords = ["pastebin", "paste", "bindings"]
categories = ["api-bindings"]

[dependencies]
attohttpc = { version = "0.13", features = ["form", "json"] }
serde = { version = "1", features = ["derive"] }
strum = "0.18"
strum_macros = "0.18"